# BioExtractAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
Code/: compare_answers_ai_and_human.ipynb  expert_agent.ipynb  pipeline_main_19q.ipynb
Model/: Fine-tuning instruction set_corrected.xlsx  questions.txt
Papers/20029816/: HIV-1 Reverse Transcriptase Drug-Resistance Mutations in Chronically Infected Individuals Receiving or Naïve to HAART in Cameroon - PMC (7_9_2024 5_00_43 PM).html
Papers/20104106/: 20104106.checked.md
Papers/20124001/: 20124001.checked.md
Papers/20300008/: 20300008.checked.md
Papers/20398371/: Characterization and frequency of a newly identified HIV-1 BF1 intersubtype circulating recombinant form in São Paulo, Brazil - PMC (7_9_2024 5_06_25 PM).html
Papers/20426823/: 20426823.checked.md
Papers/20430786/: 20430786.checked.md  (+1 more)
Papers/20438383/: 20438383.checked.md
Papers/20621204/: 20621204.checked.md  (+1 more)
Papers/24655349/: 24655349.checked.md  24655349_2024-06-28.xlsx
Results_19/: ai_adjudicated_deepseek-chat.xlsx  ai_auto_eval_19_claude-opus-4-1-20250805-3.xlsx  ai_auto_eval_19_claude-opus-4-1-20250805_adj.xlsx  ai_auto_eval_19_deepseek-chat-1.xlsx  ai_auto_eval_19_deepseek-chat-2.xlsx  ai_auto_eval_19_gpt-5-1.xlsx  ai_auto_eval_19_gpt-5-2.xlsx  ai_auto_eval_19_gpt-5-3.xlsx  ai_auto_eval_19_gpt-5_adj.xlsx
bioextract/: __init__.py  adjudicator.py  cli.py  domain_agent.py  llm.py  loaders.py  parsing.py  prompts.py  qa.py  server.py
bioextract.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+707 files in other folders)
